[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Edgar"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.26"
scipy = "1.11"
optuna = ">=3.0,<4.0"
pip = "^24.2"
setuptools = "^75.1.0"
cupy-cuda12x = "^13.3.0"
pandas = "^2.2.3"
tensorrt-bindings = "8.6.1"
tensorrt-libs = "8.6.1"
tensorrt = { file = "tensorrt-8.6.1.post1-py2.py3-none-any.whl" }
tensorflow = {version = "2.15.0", extras = ["and-cuda"]}
torch = "2.1.0"
torchvision = "0.16.0"
torchaudio = "2.1.0"
tensorflow-addons = "^0.23.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
tabtransformertf = "^0.0.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"



[[tool.poetry.source]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
